# matten

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  ROADMAP.md
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: core.rs  peers.rs  scenarios.rs
benchmarks/python/: README.md  run_references.py
benchmarks/python/matten/: cosine_similarity.rs  csv_to_matrix.rs  heat_equation_1d.rs  linear_regression_gd.rs  markov_chain.rs  tiny_pagerank.rs
benchmarks/python/tasks/: numpy_cosine_similarity.py  numpy_heat_equation_1d.py  numpy_linear_regression_gd.py  numpy_markov_chain.py  numpy_tiny_pagerank.py  pandas_csv_to_matrix.py
benchmarks/reports/: BASELINE-READY-CHECKLIST.md  internal-baseline-v0.1.md  internal-baseline-v0.2.md  peer-comparison-v0.1.md  peer-comparison-v0.2.md  python-reference-comparison-v0.1.md
benchmarks/results/: README.md
benchmarks/src/: common.rs  lib.rs  workloads.rs
benchmarks/src/workloads/: core.rs  peers.rs  scenarios.rs
benchmarks/src/workloads/peers/: nalgebra_tasks.rs  ndarray_tasks.rs
crates/matten/: CHANGELOG.md  Cargo.toml  README.md
crates/matten-data/: Cargo.toml  README.md
crates/matten-data/examples/: csv_to_tensor.rs  data_00_quickstart.rs  data_01_schema_summary.rs  data_02_select_columns.rs  data_03_missing_values.rs  data_04_to_tensor.rs  data_05_errors.rs  data_06_visual_readiness_summary.rs
crates/matten-data/src/: csv.rs  error.rs  lib.rs  numeric.rs  schema.rs  table.rs  tests.rs
crates/matten-mlprep/: CHANGELOG.md  Cargo.toml  README.md
crates/matten-mlprep/examples/: add_bias_column.rs  minmax_scale.rs  standardize_columns.rs  train_test_split.rs  visual_standardize_summary.rs
crates/matten-mlprep/src/: bias.rs  error.rs  lib.rs  scale.rs  split.rs  util.rs
crates/matten-mlprep/tests/: preprocessing.rs
crates/matten-ndarray/: CHANGELOG.md  Cargo.toml  README.md
crates/matten-ndarray/examples/: from_arrayd.rs  to_arrayd.rs
crates/matten-ndarray/src/: convert.rs  error.rs  lib.rs
crates/matten-ndarray/tests/: conversion.rs
crates/matten/examples/: 00_quickstart.rs  01_create_tensor.rs  02_shape_and_size.rs  03_reshape_flatten.rs  04_elementwise_ops.rs  07_transpose_swap_axes.rs  08_slicing_builder.rs  09_slice_str.rs  10_json_roundtrip.rs  11_csv_numeric_loading.rs  13_resource_limits.rs  14_concatenate_stack.rs  15_norm_trace_outer.rs  16_variance_std.rs  22_matrix_multiplication.rs  23_sum_mean.rs  24_min_max.rs  27_axis_reductions.rs  30_magic_square_checker.rs  31_fibonacci_matrix_power.rs  32_graph_path_counting.rs  33_markov_chain_weather.rs  34_tiny_pagerank.rs  35_linear_regression_gradient_descent.rs  36_heat_equation_1d.rs  37_kmeans_small.rs  38_nearest_neighbor_classification.rs  39_finite_difference_derivative.rs  40_trapezoidal_integration.rs  50_rowwise_scoring.rs  51_standardize_columns.rs  52_minmax_scaling.rs  53_gram_matrix.rs  54_pairwise_distance.rs  55_moving_average.rs  56_rolling_windows_basic.rs  57_visual_shape_axis_summary.rs  column_summary.rs  dynamic_00_quickstart.rs  dynamic_01_mixed_elements.rs  (+12 more)
crates/matten/examples/data/: tensor_2x2.json
crates/matten/src/: composition.rs  convert.rs  creation.rs  dynamic.rs  error.rs  lib.rs  linalg.rs  math.rs  ops.rs  parse.rs  reshape.rs  selection.rs  ser.rs  shape.rs  slice.rs  stats.rs  tensor.rs  tests.rs
crates/matten/src/composition/: tests.rs
crates/matten/src/creation/: tests.rs
crates/matten/src/dynamic/: element.rs  policy.rs  storage.rs  tensor_ext.rs
crates/matten/src/dynamic/parse/: csv.rs  json.rs
crates/matten/src/dynamic/tests/: element.rs  lifecycle.rs  tensor.rs
crates/matten/src/error/: tests.rs
crates/matten/src/math/: tests.rs
crates/matten/src/math/tests/: axis.rs  dynamic.rs  matmul.rs  whole.rs
crates/matten/src/ops/: broadcast.rs  elementwise.rs  tensor_ops.rs  tests.rs  unary_ops.rs
crates/matten/src/parse/: csv.rs  json.rs
crates/matten/src/slice/: tests.rs
crates/matten/src/stats/: tests.rs
crates/matten/src/tensor/: ops.rs
crates/matten/src/tensor/ops/: tests.rs
crates/matten/src/tests/: dynamic.rs  elementwise.rs  linalg.rs  math.rs  parse.rs  selection.rs  tensor.rs
crates/matten/src/tests/dynamic/: guards.rs
crates/matten/tests/: smoke.rs
crates/matten/tests/golden/: numpy_matmul.json
docs/: book.toml
examples/: 05_scalar_ops.rs  06_broadcasting.rs  12_boundary_error_handling.rs  20_dot_product.rs  21_matrix_vector_product.rs  22_matrix_multiplication.rs  23_sum_mean.rs  24_min_max.rs  25_normalize_vector.rs  26_cosine_similarity.rs  28_column_statistics.rs  dynamic_00_quickstart.rs  dynamic_01_mixed_elements.rs  (+9 more)
tests/fixtures/dynamic_rejection_unification/: Cargo.toml
tests/fixtures/dynamic_rejection_unification/src/: main.rs
tools/matten-migrate/: Cargo.toml  README.md
tools/matten-migrate/fixtures/common-rust-collisions-project/: Cargo.toml
tools/matten-migrate/fixtures/common-rust-collisions-project/src/: main.rs
tools/matten-migrate/fixtures/data-project/: Cargo.toml
tools/matten-migrate/fixtures/data-project/src/: analytics_notes.rs  main.rs
tools/matten-migrate/fixtures/direct-ndarray-project/: Cargo.toml
tools/matten-migrate/fixtures/direct-ndarray-project/src/: main.rs
tools/matten-migrate/fixtures/messy-nonproject/: notes.txt  scratch.rs
tools/matten-migrate/fixtures/nalgebra-project/: Cargo.toml
tools/matten-migrate/fixtures/nalgebra-project/src/: main.rs
tools/matten-migrate/fixtures/ndarray-bridge-project/: Cargo.toml
tools/matten-migrate/fixtures/ndarray-bridge-project/src/: main.rs
tools/matten-migrate/fixtures/no-matten-project/: Cargo.toml
tools/matten-migrate/fixtures/receiver-method-project/: Cargo.toml
tools/matten-migrate/fixtures/receiver-method-project/src/: main.rs
tools/matten-migrate/fixtures/simple-core-project/: Cargo.toml
tools/matten-migrate/fixtures/simple-core-project/src/: main.rs
tools/matten-migrate/src/: main.rs
tools/matten-report/: Cargo.toml  README.md
tools/matten-report/fixtures/: missing.csv  non_numeric.csv  small.csv
tools/matten-report/src/: main.rs
(+281 files in other folders)
