[workspace]
resolver = "3"
members = [
    "crates/matten",
    "crates/matten-ndarray",
    "crates/matten-mlprep",
    "crates/matten-data",
]
# The RFC-031 regression fixture is a standalone crate, intentionally kept OUT of
# the workspace: it simulates a downstream consumer with a specific feature set
# (core `matten/dynamic` ON, companion mirrors OFF) and must be isolated from
# workspace feature unification for that scenario to reproduce. Because it is
# excluded it has its own Cargo.lock; that lock is regenerated on demand and is
# git-ignored (see .gitignore), so the repository still tracks a single workspace
# Cargo.lock.
exclude = [
    "tests/fixtures/dynamic_rejection_unification",
]

# Shared package metadata inherited by member crates via `field.workspace = true`.
# The workspace uses lock-step family versioning (RFC-030): every crate shares
# this version. Per-crate `keywords`/`categories`/`description` are NOT shared —
# they differ per crate and aid crates.io discoverability.
[workspace.package]
version = "0.21.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["nabbisen"]
repository = "https://github.com/nabbisen/matten"

# Core `matten` is path-published; companions depend on it by path + version so
# they resolve locally in the workspace and by version on crates.io.
[workspace.dependencies]
matten     = { version = "0.21", path = "crates/matten", default-features = false }
ndarray    = "0.16"
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
csv        = { version = "1" }
