[workspace]
resolver = "3"
members = [
    "crates/matten",
    "crates/matten-ndarray",
    "crates/matten-mlprep",
    "crates/matten-data",
]
# The RFC-031 regression fixture is a standalone crate, intentionally kept OUT of
# the workspace: it simulates a downstream consumer with a specific feature set
# (core `matten/dynamic` ON, companion mirrors OFF) and must be isolated from
# workspace feature unification for that scenario to reproduce. Because it is
# excluded it has its own Cargo.lock; that lock is regenerated on demand and is
# git-ignored (see .gitignore), so the repository still tracks a single workspace
# Cargo.lock.
exclude = [
    "tests/fixtures/*",
    # The RFC-049 benchmark harness is intentionally OUT of the workspace so its
    # benchmark-only dependencies (criterion, and later peer crates) never enter
    # the published crates' dependency graph or the core dependency-boundary check.
    # It is invoked explicitly via `--manifest-path benchmarks/Cargo.toml`, has its
    # own git-ignored Cargo.lock, and is publish = false.
    "benchmarks",
    # RFC-063 Phase 3 local reporting tool. Kept out of the workspace so its
    # tool-only policy and future dependencies cannot leak into published crates.
    "tools/matten-report",
    # RFC-054 first local migration-readiness advisory tool. Kept out of the
    # workspace so source-scanning/tool policy cannot leak into published crates.
    "tools/matten-migrate",
]

# Shared package metadata inherited by member crates via `field.workspace = true`.
# The workspace uses lock-step family versioning (RFC-030): every crate shares
# this version. Per-crate `keywords`/`categories`/`description` are NOT shared —
# they differ per crate and aid crates.io discoverability.
[workspace.package]
version = "0.30.0"
edition         = "2024"
rust-version    = "1.85"
license         = "Apache-2.0"
authors         = ["nabbisen"]
repository      = "https://github.com/nabbisen/matten"

# Core `matten` is path-published; companions inherit this path + version
# requirement. The broad pre-1.0 requirement (`version = "0"`) is intentional:
# workspace members still ship in lock-step, while maintenance releases avoid a
# per-family edit to every companion dependency (RFC-064). User docs still show
# explicit family pins.
[workspace.dependencies]
matten              = { version = "0", path = "crates/matten", default-features = false }

ndarray             = "0.17"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
csv                 = "1"
