# Internal benchmark harness for the `matten` workspace (RFC-049 Phase 1).
#
# This crate is intentionally OUTSIDE the workspace (`workspace.exclude` in the
# root Cargo.toml). Its benchmark-only dependencies (criterion) must never enter
# the dependency graph of any published crate. It is invoked explicitly:
#
#     cargo bench --manifest-path benchmarks/Cargo.toml --no-run        # compile-check
#     cargo bench --manifest-path benchmarks/Cargo.toml --bench core -- --noplot
#
# It is not published.
[package]
name = "matten-benchmarks"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false
license = "Apache-2.0"
description = "Internal, non-published benchmark harness for the matten workspace (RFC-049 Phase 1)."

[lib]
path = "src/lib.rs"

[dependencies]
# Path dependency on core matten only. No companion crates and no peer/reference
# numeric crates in Phase 1.
matten = { path = "../crates/matten", default-features = false }
# Peer libraries for RFC-049 Phase 2 (Rust peer comparison). Optional and OFF by
# default; pulled in only via `--features peers`, so the default harness build and
# the ordinary CI `--no-run` check never touch them, and they never reach any
# published crate (proven by scripts/check-published-dependency-isolation.sh).
ndarray = { version = "0.17", optional = true }
nalgebra = { version = "0.33", optional = true }

[dev-dependencies]
# Benchmark-only. default-features = false drops plotters/rayon; keep just the
# cargo-bench integration so the harness compiles light for CI's --no-run check.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Optional passthrough so the dynamic `try_numeric` micro-workload can be measured
# when explicitly requested. Off by default (Phase 1 stays minimal).
[features]
default = []
dynamic = ["matten/dynamic"]
# RFC-049 Phase 2: opt-in Rust peer comparison. Off by default.
peers = ["dep:ndarray", "dep:nalgebra"]

[[bench]]
name = "core"
harness = false

[[bench]]
name = "scenarios"
harness = false

[[bench]]
name = "peers"
harness = false
required-features = ["peers"]

# Keep benchmark builds optimized so measurements are meaningful.
[profile.bench]
opt-level = 3
