[package]
name = "matten-ndarray"
description = "Conversion bridge between matten::Tensor and ndarray::ArrayD<f64>."
readme      = "README.md"
categories  = ["science", "mathematics"]
keywords    = ["tensor", "ndarray", "conversion", "bridge", "matten"]
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true

[dependencies]
matten  = { workspace = true }
ndarray = { workspace = true }

[features]
# Forwarded so dynamic-tensor rejection compiles only when dynamic tensors exist.
dynamic = ["matten/dynamic"]
