[package]
name = "matten"
version = "0.18.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A family car multidimensional array (tensor) library for small numerical trials / PoCs."
readme = "README.md"
keywords = ["tensor", "array", "ndarray", "numpy", "prototyping"]
categories = ["science", "mathematics", "data-structures"]
# Shared docs, RFCs, ROADMAP, and CI live at the workspace root, outside this
# package directory, so they are not part of the published crate by construction.

[features]
# Convenient PoC profile by default; `default-features = false` gives the lean core.
default = ["serde", "json", "csv"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
csv = ["dep:csv"]
dynamic = []

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
csv = { version = "1", optional = true }

[[example]]
name = "10_json_roundtrip"
required-features = ["json"]

[[example]]
name = "11_csv_numeric_loading"
required-features = ["csv"]

[[example]]
name = "12_boundary_error_handling"
required-features = ["json", "csv"]
