[package]
name = "matten"
description = "A family-car multidimensional array (tensor) library for small numerical trials / PoCs."
readme      = "README.md"
categories  = ["science", "mathematics", "data-structures"]
keywords    = ["tensor", "array", "ndarray", "numpy", "prototyping"]
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
# Shared docs, RFCs, ROADMAP, and CI live at the workspace root, outside this
# package directory, so they are not part of the published crate by construction.

[features]
# Convenient PoC profile by default; `default-features = false` gives the lean core.
default = ["serde", "json", "csv"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
csv = ["dep:csv"]
dynamic = []

[dependencies]
serde      = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
csv        = { workspace = true, optional = true }

[[example]]
name = "10_json_roundtrip"
required-features = ["json"]

[[example]]
name = "11_csv_numeric_loading"
required-features = ["csv"]

[[example]]
name = "12_boundary_error_handling"
required-features = ["json", "csv"]
