[package]
name        = "matten-migrate"
description = "Local-only advisory migration-readiness tool for matten projects."
version                 = "0.0.0"
edition                 = "2024"
rust-version            = "1.85"
license                 = "Apache-2.0"
authors                 = ["nabbisen"]
publish = false

[dependencies]
