[package]
name = "dynamic-rejection-unification"
version = "0.0.0"
edition = "2024"
publish = false

# Self-rooted as its own (single-crate) workspace so it is never claimed by the
# parent workspace, independent of how the parent's `exclude` is written. Cargo's
# `exclude` key does not expand globs (unlike `members`), so a parent glob such as
# `tests/fixtures/*` does not exclude this crate when Cargo resolves the workspace
# from inside this directory; an empty `[workspace]` table here makes the exclusion
# robust regardless. Any future fixture under `tests/fixtures/` should do the same.
[workspace]

# Regression fixture for RFC-031.
#
# Simulates a downstream crate that enables core `matten/dynamic` while leaving
# the companion `dynamic` mirror features OFF. Under Cargo feature unification a
# single `matten` is compiled WITH `dynamic`, but the companion cfg gates
# (removed in v0.19.1) would previously have been compiled out, allowing a
# dynamic Tensor to reach numeric accessors and panic.
#
# Expected: every companion API returns Err(DynamicTensor) — no panic.

[dependencies]
matten        = { path = "../../../crates/matten",        features = ["dynamic"], default-features = false }
matten-ndarray = { path = "../../../crates/matten-ndarray", default-features = true }
matten-mlprep  = { path = "../../../crates/matten-mlprep",  default-features = true }
